--- a/css/style.css
+++ b/css/style.css
@@ -82,8 +82,10 @@ body {
 .login_sec {
   width: 100%;
   height: 2rem;
-  background: #595959;
-  text-align: center;
+  background: #2a2a2a;
+  text-align: left;
+  padding-left: 1rem;
+
 }
 .login_sec .lgoin_system {
   cursor: pointer;
@@ -92,6 +94,71 @@ body {
   font-weight: 700;
   color: var(--WhiteColor);
 }
+.login_sec .lgoin_system a {
+  display: inline-block;
+  padding: 4.5px 20px 3px 20px;
+  background: #007bff  ;
+  color: white !important;
+}
+.login_sec .lgoin_system button {
+  padding: 4.5px 8px 3px 8px;
+  color: white !important;
+}
+.login_sec .lgoin_system button:hover {
+  background: #29598e;
+}
+
+/* lapel */
+
+label {
+  position: relative;
+  cursor: pointer;
+  background: #007bff;
+  padding-left: .8rem;
+}
+
+label i {
+  position: absolute;
+  left: 16px;
+  top: 10px;
+  right: 16px;
+  bottom: 0px;
+  font-family: "FontAwesome";
+  color: #828e9e;
+}
+
+input {
+  width: 16px;
+  border: none;
+  outline: none;
+  padding: 4.5px 8px 3px 25px;
+  border-radius: 8px;
+  font-size: 1em;
+  transition: 0.5s;
+  color: #a3acc4;
+  background-color: #fff;
+  caret-color: #828e9e;
+}
+
+input:hover {
+  cursor: pointer;
+}
+
+input:focus {
+  width: 500px;
+  background: #fff;
+  box-shadow: 0px 5px 25px -5px rgba(215, 215, 215, 100%);
+}
+
+input:focus ~ .search-icon {
+  transition: 0.1s;
+  opacity: 0;
+}
+.line_right {
+  width: 1rem;
+  background: red;
+}
+/* lapel End */
 .login_sec .login_user {
   position: fixed;
   top: 0;
@@ -167,11 +234,11 @@ body {
 
 .dropdown_hover {
   position: absolute;
-  background: rgba(0, 0, 0, 0.7) ;
-  width: 10rem;
+  background:#ccc;
+  width: auto;
   z-index: 100;
-  left: -2rem;
-  padding: 10px;
+  right: 0;
+  top: 3rem;
   opacity: 0;
   visibility: hidden;
   transition: opacity .5s;
@@ -179,13 +246,40 @@ body {
   -moz-transition: opacity .5s;
   -ms-transition: opacity .5s;
   -o-transition: opacity .5s;
+  display: flex;
 }
-.dropdown_hover span {
-  color: #fff;
+.dropdown_hover > div {
+  padding: 10px;
+  background: rgba(241, 240, 240, 0.842) ;
+  width: 17rem;
+  border-left: 1px solid rgba(74,25,9,0.1);
+}
+.active_react {
+  font-family: 'Cairo', sans-serif;
+  font-weight: 700 ;
+  color: var(--MainOrangeColor);
+}
+.dropdown_hover span a{
+  color: #000 !important;
   display: block;
   padding: 10px;
+  font-family: 'Cairo', sans-serif;
 }
-
+.dropdown_hover ul {
+  color: #000 !important;
+  display: block;
+  padding: 10px;
+  font-family: 'Cairo', sans-serif;
+  list-style-type: square !important;
+  margin-right: 2rem;
+}
+.dropdown_hover ul li {
+  font-size: 12px;
+  font-weight: 600;
+  margin-bottom: 1rem;
+  color: #cb9d00  ;
+  cursor: pointer;
+}
 .droped:hover  .dropdown_hover{
   opacity: 1;
   visibility: visible;
